commit translated contents

--- a/docs/docs-ref-autogen/outlook/office.itemcompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.itemcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 247bf7cfe3bc8bb003d54cb4eb06ba029d75dfe5
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: 30d390ec34858a712c0a181bc49c53a282598820
+ms.sourcegitcommit: 1665198bc1913e60caf12b3d1342844b57a3453a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298181"
+ms.lasthandoff: 12/21/2018
+ms.locfileid: "27384248"
 items:
 - uid: outlook.Office.ItemCompose
   summary: >-
@@ -51,7 +51,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
+    <tr><td>错误</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
@@ -111,7 +111,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr>
 
 
-    <tr><td>Errors</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
+    <tr><td>错误</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
   isPreview: true
   name: addFileAttachmentFromBase64Async(base64File, attachmentName, options, callback)
   fullName: addFileAttachmentFromBase64Async
@@ -126,7 +126,7 @@ items:
       description: ''
     parameters:
     - id: base64File
-      description: 以 base64 编码的图像或文件添加到电子邮件或事件的内容。
+      description: 要添加到电子邮件或事件的图像或文件的 base64 编码内容。
       type:
       - string
     - id: attachmentName
@@ -163,7 +163,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
+    <tr><td>错误</td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
@@ -237,7 +237,7 @@ items:
       description: ''
 - uid: outlook.Office.ItemCompose.getAttachmentsAsync
   summary: >-
-    作为数组中获取项目的附件。
+    获取项目的附件作为数组。
 
 
     \[[API 集： 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -280,7 +280,7 @@ items:
     <table><tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr>
 
 
-    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>Read</td></tr></table>
+    <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr></table>
 
 
     [可操作的消息](https://docs.microsoft.com/outlook/actionable-messages/invoke-add-in-from-actionable-message)的详细信息<!-- -->。
@@ -347,7 +347,7 @@ items:
     将附件从邮件或约会中删除。
 
 
-    RemoveAttachmentAsync 方法从项目中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 会话是通过，当用户关闭应用程序，或如果用户开始撰写内嵌窗体，则随后弹出窗体继续在单独的窗口。
+    RemoveAttachmentAsync 方法从项目中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用，或者如果用户开始在内嵌窗体中撰写，则随后弹出的窗体中继续在单独的窗口撰写时，会话即结束。
 
 
     \[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -358,33 +358,33 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
+    <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
 
 
-    `removeAttachmentAsync(attachmentIndex: string): void;`
+    `removeAttachmentAsync(attachmentId: string): void;`
 
 
-    `removeAttachmentAsync(attachmentIndex: string, options: Office.AsyncContextOptions): void;`
+    `removeAttachmentAsync(attachmentId: string, options: Office.AsyncContextOptions): void;`
 
 
-    `removeAttachmentAsync(attachmentIndex: string, callback: (result: AsyncResult<void>) => void): void;`
-  name: removeAttachmentAsync(attachmentIndex, options, callback)
+    `removeAttachmentAsync(attachmentId: string, callback: (result: AsyncResult<void>) => void): void;`
+  name: removeAttachmentAsync(attachmentId, options, callback)
   fullName: removeAttachmentAsync
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'removeAttachmentAsync(attachmentIndex: string, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<void>) => void): void;'
+    content: 'removeAttachmentAsync(attachmentId: string, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
-    - id: attachmentIndex
-      description: 要删除的附件的标识符。字符串的最大长度为 100 个字符。
+    - id: attachmentId
+      description: 要删除的附件的标识符。
       type:
       - string
     - id: options
@@ -426,7 +426,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
+    <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
@@ -475,7 +475,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
+    <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
