--- a/docs/docs-ref-autogen/excel/excel.stylecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.stylecollection.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 772c5560ce09199152087836ca8022b36272e3f9
-ms.sourcegitcommit: c756c5499da5aad3736cc71573ac35f9ca3d6738
+ms.openlocfilehash: 3b7ddf68e2b048a48a68590a684f2b8cc4649a0f
+ms.sourcegitcommit: 1665198bc1913e60caf12b3d1342844b57a3453a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 12/19/2018
-ms.locfileid: "27378195"
+ms.lasthandoff: 12/21/2018
+ms.locfileid: "27384241"
 items:
 - uid: excel.Excel.StyleCollection
   summary: >-
-    代表一个所有样式的集合。
+    代表一个所有样式的集合。 警告： StyleCollection 项数组从集合中加载项时具有的已知的问题。 不要使用`StyleCollection.items` <!-- -->，任何`load()`方法，以及`toJSON()`方法。
 
 
     \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -71,7 +71,7 @@ items:
       type:
       - string
 - uid: excel.Excel.StyleCollection.items
-  summary: 获取此集合中的加载的子项目。
+  summary: 警告： StyleCollection 项数组从集合中加载项时具有的已知的问题。 不要使用`StyleCollection.items` <!-- -->，任何`load()`方法，以及`toJSON()`方法。
   name: items
   fullName: items
   langs:
@@ -83,15 +83,7 @@ items:
       type:
       - Excel.Style[]
 - uid: excel.Excel.StyleCollection.load
-  summary: 队列设置命令加载指定的对象的属性。 读取属性之前，必须调用"context.sync()"。
-  remarks: >-
-    除了此签名，此方法具有以下签名：
-
-
-    `load(option?: { select?: string; expand?: string; }): Excel.StyleCollection`-其中 option.select 是一个以逗号分隔的字符串，指定要加载的属性，options.expand 是一个以逗号分隔的字符串，指定要加载的导航属性。
-
-
-    `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.StyleCollection`-仅可对集合的类型。 它是类似于前一个签名。 Option.top 指定集合项可在结果中包含的最大数目。 Option.skip 指定要跳过和结果中不包含的项的数目。 如果指定 option.top，则将跳过指定的数目的项后启动结果集。
+  summary: 警告： StyleCollection 项数组从集合中加载项时具有的已知的问题。 不要使用`StyleCollection.items` <!-- -->，任何`load()`方法，以及`toJSON()`方法。
   name: load(option)
   fullName: load
   langs:
@@ -105,10 +97,11 @@ items:
       description: ''
     parameters:
     - id: option
-      description: 以逗号分隔字符串或一个指定要加载的属性的字符串数组。
+      description: ''
       type:
       - string | string[]
 - uid: excel.Excel.StyleCollection.toJSON
+  summary: 警告： StyleCollection 项数组从集合中加载项时具有的已知的问题。 不要使用`StyleCollection.items` <!-- -->，任何`load()`方法，以及`toJSON()`方法。
   name: toJSON()
   fullName: toJSON
   langs:
