--- a/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 33a495efab77b08c1afc5507e239418465f5dcba
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: dfa08a7fc9a9797886123641bde393a6246cb142
+ms.sourcegitcommit: 1665198bc1913e60caf12b3d1342844b57a3453a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298279"
+ms.lasthandoff: 12/21/2018
+ms.locfileid: "27384276"
 items:
 - uid: outlook.Office.AppointmentCompose
   summary: >-
@@ -67,7 +67,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr>
 
 
-    <tr><td>Errors</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
+    <tr><td>错误</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
@@ -151,7 +151,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr>
 
 
-    <tr><td>Errors</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
+    <tr><td>错误</td><td>AttachmentSizeExceeded-附件大于所允许。</td></tr><tr><td></td><td>FileTypeNotSupported-附件具有未允许的扩展名。</td></tr><tr><td></td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
 
     ####示例
 
@@ -188,7 +188,7 @@ items:
       description: ''
     parameters:
     - id: base64File
-      description: 以 base64 编码的图像或文件添加到电子邮件或事件的内容。
+      description: 要添加到电子邮件或事件的图像或文件的 base64 编码内容。
       type:
       - string
     - id: attachmentName
@@ -273,7 +273,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr>
 
 
-    <tr><td>Errors</td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
+    <tr><td>错误</td><td>NumberOfAttachmentsExceeded-的邮件或约会的附件太多。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
@@ -499,7 +499,7 @@ items:
       - Time
 - uid: outlook.Office.AppointmentCompose.getAttachmentsAsync
   summary: >-
-    作为数组中获取项目的附件。
+    获取项目的附件作为数组。
 
 
     \[[API 集： 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -688,7 +688,7 @@ items:
       type:
       - '(result: AsyncResult<Office.CustomProperties>) => void'
     - id: userContext
-      description: 可选。 开发人员可以提供他们想要访问的回调函数中的任何对象。 AsyncResult.asyncContext 属性的回调函数中，可以访问此对象。
+      description: 可选。 开发人员可以提供他们想要在回调函数中访问的任何对象。 AsyncResult.asyncContext 属性的回调函数中，可以访问此对象。
       type:
       - any
 - uid: outlook.Office.AppointmentCompose.location
@@ -752,7 +752,7 @@ items:
       - outlook.Office.NotificationMessages
 - uid: outlook.Office.AppointmentCompose.optionalAttendees
   summary: >-
-    提供对事件的可选与会者的访问。 对象的类型和访问级别取决于当前项的模式。 OptionalAttendees 属性返回一个[Office.Recipients](xref:outlook.Office.Recipients)对象，提供用于获取或更新会议的可选与会者的方法。
+    提供对事件的可选与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。 OptionalAttendees 属性返回一个[Office.Recipients](xref:outlook.Office.Recipients)对象，提供用于获取或更新会议的可选与会者的方法。
 
 
     \[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -829,7 +829,7 @@ items:
     获取或设置约会的定期模式。
 
 
-    如果项目为一系列或一系列中的实例的定期属性返回定期约会或会议请求的定期的对象。 `null`将返回单个约会和会议请求的单个约会。
+    如果项目为一系列或一系列中的实例的定期属性返回定期约会或会议请求的定期的对象。 针对单个约会和单个约会的会议请求返回 `null`。
 
 
     注意： 会议请求具有 IPM itemClass 的值。Schedule.Meeting.Request。
@@ -859,7 +859,7 @@ items:
     将附件从邮件或约会中删除。
 
 
-    RemoveAttachmentAsync 方法从项目中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 会话是通过，当用户关闭应用程序，或如果用户开始撰写内嵌窗体，则随后弹出窗体继续在单独的窗口。
+    RemoveAttachmentAsync 方法从项目中删除具有指定标识符的附件。 最佳做法是，仅当同一个邮件应用程序在同一会话中添加了一个附件时，你才应使用该附件标识符来删除该附件。 在 Outlook Web App 和适用于设备的 OWA 中，附件标识符只在同一个会话中才有效。 当用户关闭应用，或者如果用户开始在内嵌窗体中撰写，则随后弹出的窗体中继续在单独的窗口撰写时，会话即结束。
 
 
     \[[API 集： 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -870,19 +870,19 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
+    <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
 
 
-    `removeAttachmentAsync(attachmentIndex: string): void;`
+    `removeAttachmentAsync(attachmentId: string): void;`
 
 
-    `removeAttachmentAsync(attachmentIndex: string, options: Office.AsyncContextOptions): void;`
+    `removeAttachmentAsync(attachmentId: string, options: Office.AsyncContextOptions): void;`
 
 
-    `removeAttachmentAsync(attachmentIndex: string, callback: (result: AsyncResult<void>) => void): void;`
+    `removeAttachmentAsync(attachmentId: string, callback: (result: AsyncResult<void>) => void): void;`
 
     #### <a name="examples"></a>示例
 
@@ -901,20 +901,20 @@ items:
     );
 
     ```
-  name: removeAttachmentAsync(attachmentIndex, options, callback)
+  name: removeAttachmentAsync(attachmentId, options, callback)
   fullName: removeAttachmentAsync
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'removeAttachmentAsync(attachmentIndex: string, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<void>) => void): void;'
+    content: 'removeAttachmentAsync(attachmentId: string, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
-    - id: attachmentIndex
-      description: 要删除的附件的标识符。字符串的最大长度为 100 个字符。
+    - id: attachmentId
+      description: 要删除的附件的标识符。
       type:
       - string
     - id: options
@@ -927,7 +927,7 @@ items:
       - '(result: AsyncResult<void>) => void'
 - uid: outlook.Office.AppointmentCompose.removeHandlerAsync
   summary: >-
-    删除事件处理程序支持的事件。
+    删除支持事件的事件处理程序。
 
 
     当前受支持的事件类型的`Office.EventType.AppointmentTimeChanged` <!-- -->， `Office.EventType.RecipientsChanged` <!-- -->，和`Office.EventType.RecurrenceChanged` <!-- -->。 在预览`Office.EventType.AttachmentsChanged`，还支持。
@@ -958,7 +958,7 @@ items:
       description: ''
     parameters:
     - id: eventType
-      description: 应取消处理程序的事件。
+      description: 应撤销处理程序的事件。
       type:
       - EventType
     - id: handler
@@ -975,7 +975,7 @@ items:
       - '(result: AsyncResult<void>) => void'
 - uid: outlook.Office.AppointmentCompose.requiredAttendees
   summary: >-
-    提供对事件的必需与会者的访问。 对象的类型和访问级别取决于当前项的模式。 RequiredAttendees 属性返回一个[Office.Recipients](xref:outlook.Office.Recipients)对象，提供用于获取或更新会议的必需的与会者的方法。
+    提供对事件的必需与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。 RequiredAttendees 属性返回一个[Office.Recipients](xref:outlook.Office.Recipients)对象，提供用于获取或更新会议的必需的与会者的方法。
 
 
     \[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -1043,7 +1043,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
+    <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
@@ -1105,13 +1105,13 @@ items:
       - '(result: AsyncResult<string>) => void'
 - uid: outlook.Office.AppointmentCompose.seriesId
   summary: >-
-    获取实例所属的系列的 id。
+    获取实例所属的系列的 ID。
 
 
     在 OWA 和 Outlook 中，可能指向返回此项目所属的父 （系列） 项的 Exchange Web Services (EWS) ID。 但是，在 iOS 和 Android，可能指向返回父项的 REST ID。
 
 
-    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值的 REST API 调用之前，应将其转换使用 Office.context.mailbox.convertToRestId。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
+    注意： 可能指向属性返回的标识符是 Exchange Web 服务的项标识符相同。 可能指向属性不是与 Outlook Id 使用 Outlook REST API 相同的。 使用此值进行 REST API 调用前，应使用 Office.context.mailbox.convertToRestId 对它进行转换。 有关详细信息，请参阅[使用 Outlook REST Api 从 Outlook 外接程序](https://docs.microsoft.com/outlook/add-ins/use-rest-api)<!-- -->。
 
 
     可能指向属性返回 null 没有父项目，如单个约会系列项目的项目或会议请求，并返回 undefined 不是会议请求的其他任何项。
@@ -1149,7 +1149,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>约会组织者</td></tr>
 
 
-    <tr><td>Errors</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
+    <tr><td>错误</td><td>InvalidAttachmentId-附件标识符不存在。</td></tr></table>
 
 
     除了此签名，该方法还具有以下签名：
