commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.rangefilldata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.rangefilldata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 66905984c136b68af8a16d6ba0b634dde1ed728a
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 4147805d6b90c4a5eb86b330da2905439bc4fda3
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26228162"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770453"
 items:
 - uid: excel.Excel.Interfaces.RangeFillData
   summary: 描述调用"rangeFill.toJSON()"返回的数据的接口。
@@ -18,7 +18,7 @@ items:
   - excel.Excel.Interfaces.RangeFillData.color
 - uid: excel.Excel.Interfaces.RangeFillData.color
   summary: >-
-    HTML 表示边框线，窗体的颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色
+    HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色
 
 
     \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
