--- a/docs/docs-ref-autogen/excel/excel.chartfill.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartfill.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 48f4df18a14864dcd906c8b490056f53f39c12bc
-ms.sourcegitcommit: 3771b97cffd6e0510fd4e9c6288db696cd0c0ca9
+ms.openlocfilehash: d4acd0100c894ee41d6cb4ca453810cdd6cd53af
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "26996261"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770467"
 items:
 - uid: excel.Excel.ChartFill
   summary: >-
@@ -79,7 +79,7 @@ items:
       description: "\n#### <a name=\"examples\"></a>示例\n\n```javascript\nExcel.run(function (ctx) { \n    var chart = ctx.workbook.worksheets.getItem(\"Sheet1\").charts.getItem(\"Chart1\");    \n\n    chart.format.fill.setSolidColor(\"#FF0000\");\n\n    return ctx.sync().then(function() {\n            console.log(\"Chart1 Background Color Changed.\");\n    });\n}).catch(function(error) {\n    console.log(\"Error: \" + error);\n    if (error instanceof OfficeExtension.Error) {\n        console.log(\"Debug info: \" + JSON.stringify(error.debugInfo));\n    }\n});\n```\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n\n    let pointsCollection = sheet.charts.getItemAt(0).series.getItemAt(0).points;\n    let point = pointsCollection.getItemAt(2);\n\n    // Set color for chart point.\n    point.format.fill.setSolidColor('red');\n\n    await context.sync();        \n});\n```"
     parameters:
     - id: color
-      description: HTML 表示边框线，窗体的颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名的 HTML 颜色 （例如"橙色"）。
+      description: HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名的 HTML 颜色 （例如"橙色"）。
       type:
       - string
 - uid: excel.Excel.ChartFill.toJSON
