--- a/docs/docs-ref-autogen/excel/excel.interfaces.rangefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.rangefillupdatedata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2818a225c61b7ea43631353a1b07514c358fb6d0
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 3e847be08f67a85c644de799200f1d217ca02bb6
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26231683"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770446"
 items:
 - uid: excel.Excel.Interfaces.RangeFillUpdateData
   summary: 更新数据的 RangeFill 对象，在"rangeFill.set （{...}）"中使用的接口。
@@ -18,7 +18,7 @@ items:
   - excel.Excel.Interfaces.RangeFillUpdateData.color
 - uid: excel.Excel.Interfaces.RangeFillUpdateData.color
   summary: >-
-    HTML 表示边框线，窗体的颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色
+    HTML 表示的窗体的背景颜色的颜色代码\#RRGGBB (例如"FFA500") 或为已命名 （例如"橙色"） 的 HTML 颜色
 
 
     \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
