--- a/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.appointmentcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: dfa08a7fc9a9797886123641bde393a6246cb142
-ms.sourcegitcommit: 1665198bc1913e60caf12b3d1342844b57a3453a
+ms.openlocfilehash: 5f0246132378ac8862334925b0dd4cc111206133
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "27384276"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770544"
 items:
 - uid: outlook.Office.AppointmentCompose
   summary: >-
@@ -606,20 +606,20 @@ items:
     }
 
     ```
-  name: getSelectedDataAsync(coerciontype, options, callback)
+  name: getSelectedDataAsync(coercionType, options, callback)
   fullName: getSelectedDataAsync
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'getSelectedDataAsync(coerciontype: Office.CoercionType, options: Office.AsyncContextOptions, callback: (result: AsyncResult<any>) => void): void;'
+    content: 'getSelectedDataAsync(coercionType: Office.CoercionType, options: Office.AsyncContextOptions, callback: (result: AsyncResult<any>) => void): void;'
     return:
       type:
       - void
       description: 作为字符串的所选数据的格式由 coercionType 确定。
     parameters:
-    - id: coerciontype
-      description: ''
+    - id: coercionType
+      description: 请求数据的格式。如果为文本，则此方法返回纯文本作为字符串，删除任何显示的 HTML 标记。如果为 HTML，则此方法返回所选文本，不论是纯文本还是 HTML。
       type:
       - office.Office.CoercionType
     - id: options
