--- a/docs/docs-ref-autogen/outlook/office.body.yml
+++ b/docs/docs-ref-autogen/outlook/office.body.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 55c97a06f46c4718167b063cf7d8af8983d71005
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: 1ce74f8339d3c7c160f35c36b1407f0710115863
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26298139"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770509"
 items:
 - uid: outlook.Office.Body
   summary: >-
@@ -51,7 +51,7 @@ items:
     除了此签名，此方法还具有以下签名：
 
 
-    `getAsync(coerciontype: Office.CoercionType, callback: (result: AsyncResult<string>) => void): void;`
+    `getAsync(coercionType: Office.CoercionType, callback: (result: AsyncResult<string>) => void): void;`
 
     #### <a name="examples"></a>示例
 
@@ -76,20 +76,20 @@ items:
     }
 
     ```
-  name: getAsync(coerciontype, options, callback)
+  name: getAsync(coercionType, options, callback)
   fullName: getAsync
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(coerciontype: Office.CoercionType, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<string>) => void): void;'
+    content: 'getAsync(coercionType: Office.CoercionType, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<string>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
-    - id: coerciontype
-      description: ''
+    - id: coercionType
+      description: 用于返回的正文的格式。
       type:
       - office.Office.CoercionType
     - id: options
@@ -150,7 +150,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr></table>
+    <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
@@ -221,7 +221,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr><tr><td></td><td>InvalidFormatError-options.coercionType 参数设置为 Office.CoercionType.Html 和邮件正文采用纯文本。</td></tr></table>
+    <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr><tr><td></td><td>InvalidFormatError-options.coercionType 参数设置为 Office.CoercionType.Html 和邮件正文采用纯文本。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
@@ -308,7 +308,7 @@ items:
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr>
 
 
-    <tr><td>Errors</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr><tr><td></td><td>InvalidFormatError-options.coercionType 参数设置为 Office.CoercionType.Html 和邮件正文采用纯文本。</td></tr></table>
+    <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数大于 1,000,000 个字符。</td></tr><tr><td></td><td>InvalidFormatError-options.coercionType 参数设置为 Office.CoercionType.Html 和邮件正文采用纯文本。</td></tr></table>
 
 
     除了此签名，此方法还具有以下签名：
