--- a/docs/docs-ref-autogen/outlook/office.itemcompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.itemcompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 30d390ec34858a712c0a181bc49c53a282598820
-ms.sourcegitcommit: 1665198bc1913e60caf12b3d1342844b57a3453a
+ms.openlocfilehash: c80a4e68e711c835f329c5b633440a563c810e68
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "27384248"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770530"
 items:
 - uid: outlook.Office.ItemCompose
   summary: >-
@@ -322,20 +322,20 @@ items:
 
 
     <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr></table>
-  name: getSelectedDataAsync(coerciontype, callback)
+  name: getSelectedDataAsync(coercionType, callback)
   fullName: getSelectedDataAsync
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'getSelectedDataAsync(coerciontype: Office.CoercionType, callback: (result: AsyncResult<any>) => void): void;'
+    content: 'getSelectedDataAsync(coercionType: Office.CoercionType, callback: (result: AsyncResult<any>) => void): void;'
     return:
       type:
       - void
       description: 作为字符串的所选数据的格式由 coercionType 确定。
     parameters:
-    - id: coerciontype
-      description: ''
+    - id: coercionType
+      description: 请求数据的格式。如果为文本，则此方法返回纯文本作为字符串，删除任何显示的 HTML 标记。如果为 HTML，则此方法返回所选文本，不论是纯文本还是 HTML。
       type:
       - office.Office.CoercionType
     - id: callback
