--- a/docs/docs-ref-autogen/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook/office.messagecompose.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: aa60539a74eb853496d919ad1aff9569a11b243f
-ms.sourcegitcommit: 1665198bc1913e60caf12b3d1342844b57a3453a
+ms.openlocfilehash: 0fa4fe0a847e831c0031308bfc2c10b4fbeff85d
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 12/21/2018
-ms.locfileid: "27384269"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770516"
 items:
 - uid: outlook.Office.MessageCompose
   summary: >-
@@ -657,20 +657,20 @@ items:
     }
 
     ```
-  name: getSelectedDataAsync(coerciontype, callback)
+  name: getSelectedDataAsync(coercionType, callback)
   fullName: getSelectedDataAsync
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'getSelectedDataAsync(coerciontype: Office.CoercionType, callback: (result: AsyncResult<any>) => void): void;'
+    content: 'getSelectedDataAsync(coercionType: Office.CoercionType, callback: (result: AsyncResult<any>) => void): void;'
     return:
       type:
       - void
       description: 作为字符串的所选数据的格式由 coercionType 确定。
     parameters:
-    - id: coerciontype
-      description: ''
+    - id: coercionType
+      description: 请求的数据的格式。 如果文本，该方法返回作为 string 的纯文本，删除任何 HTML 标记存在。 如果 HTML，该方法返回所选的文本，是否纯文本或 HTML。
       type:
       - office.Office.CoercionType
     - id: callback
