--- a/docs/docs-ref-autogen/word/word.contentcontrol.yml
+++ b/docs/docs-ref-autogen/word/word.contentcontrol.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a9207427da4e81be893996d2b304f90c6bdd20e6
-ms.sourcegitcommit: 3771b97cffd6e0510fd4e9c6288db696cd0c0ca9
+ms.openlocfilehash: 27394556625c23b97c1b4d83977ae05ab79cee92
+ms.sourcegitcommit: 4e15262bb3005b2f4ebb2756484e6a1b4e2379bd
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/30/2018
-ms.locfileid: "26995414"
+ms.lasthandoff: 01/08/2019
+ms.locfileid: "27770537"
 items:
 - uid: word.Word.ContentControl
   summary: >-
@@ -450,7 +450,7 @@ items:
       - Word.InsertLocation
 - uid: word.Word.ContentControl.insertParagraph
   summary: >-
-    指定位置处插入一个段落。 InsertLocation 值可以是开始，End，之前，或之后。
+    指定位置处插入一个段落。 InsertLocation 值可以是开始，End，之前，或之后。 如果内容控件包括一个或多个段落完整仅支持使用此方法。
 
 
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
@@ -699,7 +699,7 @@ items:
       - Word.Table
 - uid: word.Word.ContentControl.placeholderText
   summary: >-
-    获取或设置内容控件的占位符文本。内容控件为空时，将显示灰色的文本。
+    获取内容控件的占位符的文本。 内容控件为空时，将显示变暗的文本。
 
 
     \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
